[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmind"
version = "0.1.0"
description = "Biological cell-based AI memory architecture"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CellMind Team", email = "team@cellmind.ai"}
]
keywords = ["ai", "memory", "neural", "cell-memory", "hebbian-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/cellmind-team/cellmind"
Documentation = "https://github.com/cellmind-team/cellmind#readme"
Repository = "https://github.com/cellmind-team/cellmind"
Issues = "https://github.com/cellmind-team/cellmind/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cellmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"